# ocaml-lexer-microbenchmarks

./: dune  lexer_unicode_merged.mll  test.ml  test1.ml  test2.ml  test3.ml
lib/: config.ml  docstrings.ml  dune  lexing_test.ml  location.ml  parser.ml  warnings.ml
